# mobile-repair-chatbot

./: README.md  chatbot.py  main.py  prompts.py  pyproject.toml  requirements.txt  test.py
admin/: app.py
admin/templates/: admin.html  admin_login.html
static/css/: admin.css  admin_login.css  style.css
static/js/: admin.js  script.js
templates/: admin.html  admin_login.html  chatbot.html  index.html
utils/: chatbot.py  prompts.py
