[project]
name = "aishwarya-ai-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "flask>=3.1.0",
    "flask-wtf>=1.2.2",
    "numpy>=2.2.5",
    "openai>=1.76.0",
    "pymongo>=4.12.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "tiktoken>=0.9.0",
]
